tests/errors/syntax/missing_closing_square_after_size_expression.odl
main :: () -> void {
    arr := [2]int.{};
    arr[1;
};